<resources>
    <string name="app_name">Game Catalogue</string>
    <string name="publisher">Publisher</string>
    <string name="genre">Genre</string>
    <string name="platform">Platform</string>
    <string name="categorie">Categorie</string>
    <string name="todo">TODO</string>
    <string name="description">Description</string>
    <string name="_80">80</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="name">Muhamad Febri Algani</string>
    <string name="mail">febrialgani@gmail.com</string>
    <string name="about">About</string>
    <string name="title">Disco Elysium: Final Cut</string>
    <string name="desc">Drop back in with the most iconic skateboarding games ever made. Play Tony Hawk\'s Pro Skater Tony Hawk\'s Pro Skater 2 in one epic collection, rebuilt from the ground up in incredible HD. All the pro skaters, levels and tricks are back and fully-remastered, plus more. Skate in super crisp 120 FPS at 1080P or 60 FPS in native 4K. Watch the levels come to life using sharper dynamic shadows, reflections, and lens flare, plus enhanced skater textures. The PS5 enhancements don’t stop at audio and visual upgrades, either. Major features include: 120 FPS @1080p Native 4k @60FPS SSD Immediacy Haptic feedback via the DualSense wireless controller Spatialized Audio High Fidelity Atmospherics Activities and Game Help Cross-Gen Progression</string>
    <string name="img">Img</string>
</resources>