<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp">


        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="34dp"
            android:layout_height="56dp"
            android:scaleType="centerCrop"
            android:src="@drawable/de"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/img" />
    
        <LinearLayout
            android:id="@+id/ly2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_itemId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/tv_title_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_desc_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/desc"
                android:lines="2"
                android:textSize="14sp" />

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>