<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="March 26, 2021"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="160dp"
                android:layout_height="240dp"
                app:cardCornerRadius="10dp">


                <ImageView
                    android:id="@+id/iv_cover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/todo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/de" />

                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="#72000000"
                    android:gravity="center_vertical"
                    android:padding="6dp"
                    android:text="@string/_80"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_star" />


                <Button
                    android:id="@+id/btn_link"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:layout_gravity="bottom"
                    android:background="#72000000"
                    android:drawableLeft="@drawable/ic_play"
                    android:gravity="center_vertical"
                    android:text="@string/watch_trailer"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginTop="2dp"
                        android:paddingEnd="14dp"
                        android:text="@string/publisher"
                        android:textSize="14sp"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/tv_publisher"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_marginTop="2dp"
                        android:text="ZA/UM "
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow android:layout_marginTop="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginTop="2dp"
                        android:paddingEnd="14dp"
                        android:text="@string/genre"
                        android:textSize="14sp"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/tv_genre"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_marginTop="2dp"
                        android:text="Action role-playing game, Third-person shooter"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow android:layout_marginTop="2dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginTop="2dp"
                        android:paddingEnd="14dp"
                        android:text="@string/platform"
                        android:textSize="14sp"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/tv_platform"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_marginTop="2dp"
                        android:text="Nintendo Switch, PlayStation 4, PlayStation 5, Xbox One, Xbox Series X and Series S, Microsoft Windows"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow android:layout_marginTop="2dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginTop="2dp"
                        android:paddingEnd="14dp"
                        android:text="@string/categorie"
                        android:textSize="14sp"
                        tools:ignore="RtlSymmetry" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="32dp"
                        android:layout_height="64dp"
                        android:layout_column="2"
                        android:gravity="left">

                        <ImageView
                            android:id="@+id/iv_categories"
                            android:layout_width="32dp"
                            android:layout_height="64dp"
                            android:contentDescription="@string/todo"
                            android:scaleType="centerInside"
                            android:src="@drawable/t" />
                    </androidx.cardview.widget.CardView>


                </TableRow>

            </TableLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/desc"
                android:textSize="14sp" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>